--- a/pjlr/css/style.css
+++ b/pjlr/css/style.css
@@ -96,7 +96,8 @@ p {
 }
 
 .wrapper {
-	padding: 0 20px;
+	width: 85%;
+	margin: 0 auto
 }
 
 #menu {
@@ -131,11 +132,13 @@ p {
 }
 
 .pages {
-	width: 32%;
+	width: 33%;
 	float: left;
 	display: block;
 	margin-top: 3em;
 	padding: 8px;
+	-moz-box-sizing: border-box;
+         box-sizing: border-box;
 }
 
 .pages.highlighted {
@@ -225,4 +228,16 @@ p {
 
 .twitter-share-button:hover {
 	color: #000;
+}
+
+@media (max-width: 992px) {
+	.pages {
+		width: 50%;
+	}
+}
+
+@media (max-width: 768px) {
+	.pages {
+		width: 100%;
+	}
 }
