--- a/pjlr/css/style.css
+++ b/pjlr/css/style.css
@@ -96,9 +96,11 @@ p {
 }
 
 #menu {
+	margin: 0 auto 6em auto;
 	margin-bottom: 6em;
     background: #fff;
     z-index: 200;
+    width: 85%;
 }
 
 #menu ul {
@@ -116,22 +118,32 @@ p {
 	display: inline-block;
 	float: left;
 	padding-left: 40px;
-	font-family: "Proxima Nova Regular";
 	text-transform: uppercase;
 	padding-right: 20px;
-	padding-top: 20px;
-	padding-bottom: 21px;
 	height: 100%;
 	-moz-box-sizing: border-box;
          box-sizing: border-box;
     text-align: center;
+    width: 25%;
+}
+
+#menu li > div {
+	display: table;
+	width: 100%;
+	height: 100%;
+}
+
+#menu li p {
+	font-family: "Proxima Nova Regular";
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+	padding: 0;
 }
 
 #menu li a {
 	color: inherit;
 	text-decoration: none;
-	display: table-cell;
-    vertical-align: middle;
 }
 
 .isotope {
