--- a/pjlr/css/style.css
+++ b/pjlr/css/style.css
@@ -117,9 +117,8 @@ p {
 #menu li {
 	display: inline-block;
 	float: left;
-	padding-left: 40px;
+	padding: 0 20px;
 	text-transform: uppercase;
-	padding-right: 20px;
 	height: 100%;
 	-moz-box-sizing: border-box;
          box-sizing: border-box;
