--- a/pjlr/css/style.css
+++ b/pjlr/css/style.css
@@ -107,7 +107,7 @@ p {
 	display: inline-block;
 	position: relative;
 	height: 60px;
-	font-size: 1.1em;
+	font-size: 1em;
 	margin-top: 6%;
 	top: 0;
 	left: 50%;
@@ -123,7 +123,7 @@ p {
 	-moz-box-sizing: border-box;
          box-sizing: border-box;
     text-align: center;
-    width: 25%;
+    width: 16.666%;
 }
 
 #menu li > div {
@@ -268,10 +268,6 @@ p {
 		margin-top: 0;
 	}
 
-	#menu ul li {
-	    width: 25%;
-	}
-
 	.isotope {
 		margin-top: 100px;
 	}
@@ -280,5 +276,9 @@ p {
 @media (max-width: 768px) {
 	.pages {
 		width: 100%;
+	}
+
+	#menu ul {
+		font-size: .8em;
 	}
 }
