--- a/pjlr/css/style.css
+++ b/pjlr/css/style.css
@@ -1,49 +1,14 @@
 @import url("http://fast.fonts.net/t/1.css?apiType=css&projectid=3af16084-ba56-49ca-b37d-0b49b59e1927");html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font:inherit;font-size:100%;vertical-align:baseline}html{line-height:1}table{border-collapse:collapse;border-spacing:0}caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}q,blockquote{quotes:none}q:before,q:after,blockquote:before,blockquote:after{content:"";content:none}a img{border:none}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}@font-face{font-family:"AleoRegular";src:url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Regular-webfont.eot);src:url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Regular-webfont.eot?#iefix) format('embedded-opentype'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Regular-webfont.woff) format('woff'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Regular-webfont.ttf) format('truetype'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Regular-webfont.svg) format('svg')}@font-face{font-family:"AleoBold";src:url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Bold-webfont.eot);src:url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Bold-webfont.eot?#iefix) format('embedded-opentype'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Bold-webfont.woff) format('woff'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Bold-webfont.ttf) format('truetype'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Bold-webfont.svg) format('svg')}@font-face{font-family:"ProximaNovaBold";src:url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/fbc6b03a-b3a1-427c-a884-053deca3a53c.eot);src:url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/fbc6b03a-b3a1-427c-a884-053deca3a53c.eot?#iefix) format('embedded-opentype'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/d999c07b-a049-4eb5-b8a6-4f36ae25e67e.woff) format('woff'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/4d4a75f5-d32a-4a09-8665-133afd39cc37.ttf) format('truetype'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/8152bc4e-d700-4c78-b6be-326893e6f53f.svg) format('svg')}body{counter-reset: chapter;min-height:100%;background:#fff}html{min-height:100%}.progress-bar{position:fixed;left:0;top:0;height:3px;display:inline-block;background:#ff7373;width:20%;z-index:2}
 @font-face{font-family:"Proxima Nova Regular";font-weight:normal;font-style:normal;src:url('http://s1.libe.com/font/license/27522D_B_0.eot?6f3b7a3a38b9') format("eot");src:url('http://s1.libe.com/font/license/27522D_B_0.eot?#iefix') format("embedded-opentype"),url('http://s1.libe.com/font/license/27522D_B_0.woff?973092db2463') format("woff"),url('http://s1.libe.com/font/license/27522D_B_0.ttf?326b4ed42028') format("truetype"),url('http://s1.libe.com/font/license/27522D_B_0.svg#Proxima Nova Regular') format("svg")}@font-face{font-family:"Proxima Nova Regular Bold";font-weight:normal;font-style:normal;src:url('http://s1.libe.com/font/license/27522D_C_0.eot?7651b0835130') format("eot");src:url('http://s1.libe.com/font/license/27522D_C_0.eot?#iefix') format("embedded-opentype"),url('http://s1.libe.com/font/license/27522D_C_0.woff?1d97b03ffbee') format("woff"),url('http://s1.libe.com/font/license/27522D_C_0.ttf?c4b6119d8273') format("truetype"),url('http://s1.libe.com/font/license/27522D_C_0.svg#Proxima Nova Regular Bold') format("svg")}@font-face{font-family:"Trade Gothic Bold Cond";font-weight:normal;font-style:normal;src:url('http://s1.libe.com/font/license/tradegothicltstd-bdcn20.eot?1669fae0818a') format("eot");src:url('http://s1.libe.com/font/license/tradegothicltstd-bdcn20.eot?#iefix') format("embedded-opentype"),url('http://s1.libe.com/font/license/tradegothicltstd-bdcn20.woff?7f6be2b8eca9') format("woff"),url('http://s1.libe.com/font/license/tradegothicltstd-bdcn20.ttf?5dda5c1e2946') format("truetype"),url('http://s1.libe.com/font/license/tradegothicltstd-bdcn20.svg#Trade Gothic Bold Cond') format("svg")}
 
-header h1 {
-	position: relative;
-	top: 25%;
-	margin-left: auto;
-	margin-right: auto;
-	display: block;
-	width: 100%;
-	text-align: center;
-	font-size: 9em;
-	color: white;
-	text-shadow: -1px -1px 10px rgba(150, 150, 150, 1);
-	line-height: 7rem;
+h1 {
 	font-family: "Trade Gothic Bold Cond";
-}
-
-header {
-	background: url('../cover.jpg') no-repeat fixed;
-	background-size: cover;
-	height: 100%;
-	width: 100%;
-	-webkit-box-shadow: inset 0px 0px 168px 51px rgba(0,0,0,0.75);
-	-moz-box-shadow: inset 0px 0px 168px 51px rgba(0,0,0,0.75);
-	box-shadow: inset 0px 0px 168px 51px rgba(0,0,0,0.75);
-	margin-bottom: 40px;
-}
-
-header span {
-	color: #C42121;
-}
-
-header h2 {
-	font-family: Georgia;
 	font-weight: bold;
-	font-size: 20px;
-	width: 30%;
+	font-size: 2.8em;
 	text-align: center;
-	margin-right: auto;
-	margin-left: auto;
-	padding-bottom: 20px;
 	position: relative;
-	top: 25%;
-	color: white;
-	text-shadow: -1px -1px 10px rgba(150, 150, 150, 1);
+	color: #000;
+	margin: 20px auto;
 }
 
 .pages h3 {
@@ -56,18 +21,6 @@ header h2 {
 	display: block;
 	text-align: center;
 	text-transform: uppercase;
-}
-
-
-h2 {
-	font-family: Georgia;
-	font-weight: bold;
-	font-size: 20px;
-	width: 30%;
-	text-align: center;
-	margin-right: auto;
-	margin-left: auto;
-	padding-bottom: 20px;
 }
 
 p {
@@ -96,8 +49,7 @@ p {
 }
 
 #menu {
-	margin: 0 auto 6em auto;
-	margin-bottom: 6em;
+	margin: 0 auto 30px auto;
     background: #fff;
     z-index: 200;
     width: 85%;
@@ -108,7 +60,6 @@ p {
 	position: relative;
 	height: 60px;
 	font-size: 1em;
-	margin-top: 6%;
 	top: 0;
 	left: 50%;
 	transform: translate(-50%, 0);
@@ -155,7 +106,6 @@ p {
 	width: 33%;
 	float: left;
 	display: block;
-	margin-top: 3em;
 	padding: 8px 16px;
 	-moz-box-sizing: border-box;
          box-sizing: border-box;
@@ -173,7 +123,6 @@ p {
 
 .pages .savoir-plus h4 {
 	padding: 10px 0;
-	font-family: "Georgia", sans-serif;
 	font-size: 1.6em;
 }
 
@@ -182,9 +131,10 @@ p {
 }
 
 .pages .savoir-plus p {
+	font-family: "Georgia", sans-serif;
 	font-size: 1.3em;
     letter-spacing: -0.5px;
-    line-height: 1.9rem;
+    line-height: 1.6rem;
 }
 
 .isotope.twocols .pages {
@@ -318,8 +268,6 @@ p {
 	}
 
 	#menu {
-		position: fixed;
-		top: 0;
 		width: 100%;
 	}
 
@@ -341,6 +289,12 @@ p {
 
 	#menu ul {
 		font-size: .8em;
+	}
+}
+
+@media (min-width: 992px) {
+	#menu {
+		position: relative !important;
 	}
 }
 
