--- a/pjlr/css/style.css
+++ b/pjlr/css/style.css
@@ -7,7 +7,7 @@ header {
 	background-size: 100%;
 	margin-top: 0;
 	padding-bottom: 5%;
-	padding-top: 20px;
+	padding-top: 2%;
 	text-shadow: -1px -1px 10px rgba(150, 150, 150, 1);
 }
 
