--- a/pjlr/css/style.css
+++ b/pjlr/css/style.css
@@ -1,14 +1,13 @@
 @import url("http://fast.fonts.net/t/1.css?apiType=css&projectid=3af16084-ba56-49ca-b37d-0b49b59e1927");html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font:inherit;font-size:100%;vertical-align:baseline}html{line-height:1}table{border-collapse:collapse;border-spacing:0}caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}q,blockquote{quotes:none}q:before,q:after,blockquote:before,blockquote:after{content:"";content:none}a img{border:none}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}@font-face{font-family:"AleoRegular";src:url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Regular-webfont.eot);src:url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Regular-webfont.eot?#iefix) format('embedded-opentype'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Regular-webfont.woff) format('woff'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Regular-webfont.ttf) format('truetype'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Regular-webfont.svg) format('svg')}@font-face{font-family:"AleoBold";src:url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Bold-webfont.eot);src:url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Bold-webfont.eot?#iefix) format('embedded-opentype'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Bold-webfont.woff) format('woff'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Bold-webfont.ttf) format('truetype'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/Aleo-Bold-webfont.svg) format('svg')}@font-face{font-family:"ProximaNovaBold";src:url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/fbc6b03a-b3a1-427c-a884-053deca3a53c.eot);src:url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/fbc6b03a-b3a1-427c-a884-053deca3a53c.eot?#iefix) format('embedded-opentype'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/d999c07b-a049-4eb5-b8a6-4f36ae25e67e.woff) format('woff'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/4d4a75f5-d32a-4a09-8665-133afd39cc37.ttf) format('truetype'),url(//cartodb-assets.global.ssl.fastly.net/odyssey.js/8152bc4e-d700-4c78-b6be-326893e6f53f.svg) format('svg')}body{counter-reset: chapter;min-height:100%;background:#fff}html{min-height:100%}.progress-bar{position:fixed;left:0;top:0;height:3px;display:inline-block;background:#ff7373;width:20%;z-index:2}
 @font-face{font-family:"Proxima Nova Regular";font-weight:normal;font-style:normal;src:url('http://s1.libe.com/font/license/27522D_B_0.eot?6f3b7a3a38b9') format("eot");src:url('http://s1.libe.com/font/license/27522D_B_0.eot?#iefix') format("embedded-opentype"),url('http://s1.libe.com/font/license/27522D_B_0.woff?973092db2463') format("woff"),url('http://s1.libe.com/font/license/27522D_B_0.ttf?326b4ed42028') format("truetype"),url('http://s1.libe.com/font/license/27522D_B_0.svg#Proxima Nova Regular') format("svg")}@font-face{font-family:"Proxima Nova Regular Bold";font-weight:normal;font-style:normal;src:url('http://s1.libe.com/font/license/27522D_C_0.eot?7651b0835130') format("eot");src:url('http://s1.libe.com/font/license/27522D_C_0.eot?#iefix') format("embedded-opentype"),url('http://s1.libe.com/font/license/27522D_C_0.woff?1d97b03ffbee') format("woff"),url('http://s1.libe.com/font/license/27522D_C_0.ttf?c4b6119d8273') format("truetype"),url('http://s1.libe.com/font/license/27522D_C_0.svg#Proxima Nova Regular Bold') format("svg")}@font-face{font-family:"Trade Gothic Bold Cond";font-weight:normal;font-style:normal;src:url('http://s1.libe.com/font/license/tradegothicltstd-bdcn20.eot?1669fae0818a') format("eot");src:url('http://s1.libe.com/font/license/tradegothicltstd-bdcn20.eot?#iefix') format("embedded-opentype"),url('http://s1.libe.com/font/license/tradegothicltstd-bdcn20.woff?7f6be2b8eca9') format("woff"),url('http://s1.libe.com/font/license/tradegothicltstd-bdcn20.ttf?5dda5c1e2946') format("truetype"),url('http://s1.libe.com/font/license/tradegothicltstd-bdcn20.svg#Trade Gothic Bold Cond') format("svg")}
 
-header {
+.header {
 	width: 100%;
 	background-image: url(../cover.jpg);
-	background-size: 100%;
+	background-size: 100% auto;
 	margin-top: 0;
 	padding-bottom: 5%;
 	padding-top: 20px;
-	text-shadow: -1px -1px 10px rgba(150, 150, 150, 1);
 }
 
 h1 {
@@ -19,7 +18,9 @@ h1 {
 	text-align: center;
 	position: relative;
 	color: #fff;
-	margin: 0 auto 20px auto;
+	margin: 20px auto 20px auto;
+	text-shadow: -1px -1px 10px rgba(150, 150, 150, 1);
+	line-height: 1em;
 }
 
 h2 {
@@ -28,6 +29,8 @@ h2 {
 	text-align: center;
 	margin: 20px auto;
 	color: #fff;
+/*	text-shadow: -1px -1px 10px rgba(0, 0, 0, 1);
+*/	text-shadow: -1px -1px 10px rgba(150, 150, 150, 1);
 }
 
 .pages h3 {
@@ -40,6 +43,12 @@ h2 {
 	display: block;
 	text-align: center;
 	text-transform: uppercase;
+	margin-bottom: 10px;
+	line-height: 1em;
+}
+
+.pages h3 a {
+	text-decoration: none;
 }
 
 p {
@@ -72,7 +81,6 @@ p {
     background: #fff;
     z-index: 200;
     width: 85%;
-    padding-bottom: 3%;
 }
 
 #menu ul {
@@ -82,7 +90,8 @@ p {
 	font-size: 1em;
 	top: 0;
 	left: 50%;
-	transform: translate(-50%, 0);
+	-webkit-transform: translate(-50%, 0);
+		    transform: translate(-50%, 0);
 }
 
 #menu li {
@@ -118,7 +127,7 @@ p {
 
 .isotope {
 	width: 85%;
-	margin: 0 auto;
+	margin: 50px auto 0 auto;
 	z-index: 100;
 }
 
@@ -129,7 +138,7 @@ p {
 	padding: 8px 16px;
 	-moz-box-sizing: border-box;
          box-sizing: border-box;
-    padding-bottom: 20px;
+    padding-bottom: 50px;
 }
 
 .pages.large {
@@ -148,6 +157,7 @@ p {
 	font-size: 2.2em;
 	color: #000;
 	letter-spacing: -1px;
+	line-height: 1em;
 }
 
 .pages .savoir-plus a {
@@ -176,15 +186,15 @@ p {
 
 
 /* Colors */
-.wrapper .pages span, .wrapper #menu li, .wrapper .twitter-share-button {
+.pagewrapper .pages span, .pagewrapper #menu li, .pagewrapper .twitter-share-button {
 	color: #4BC0A1;
 	transition: color .3s;
 }
-.wrapper #menu ul {
+.pagewrapper #menu ul {
 	border: 5px solid #4BC0A1;
 	transition: border-color .3s;
 }
-.wrapper #menu li.selected {
+.pagewrapper #menu li.selected {
 	color: #fff;
 	background: #4BC0A1;
 	transition: color .3s, backgruond-color .3s;
@@ -283,8 +293,30 @@ p {
 }
 
 @media (max-width: 992px) {
+	.header {
+		background-size: auto 100%;
+	}
+
+	#main-header {
+		position: relative;
+	}
+
+	section#main-content {
+		padding-top: 0;
+	}
+
 	.pages {
 		width: 50%;
+	}
+
+	.pages p {
+		font-size: 1.5em;
+		letter-spacing: -1px;
+		line-height: 2rem;
+	}
+
+	.twocols .pages p {
+		line-height:  1.7rem;
 	}
 
 	#menu {
@@ -303,12 +335,21 @@ p {
 }
 
 @media (max-width: 768px) {
+	h1 {
+		font-size: 3em;
+		padding: 0 10px;
+	}
+
+	h2 {
+		margin-bottom: 50px;
+	}
+
 	.pages, .isotope.twocols .pages {
 		width: 100%;
 	}
 
 	#menu ul {
-		font-size: .8em;
+		font-size: .6em;
 	}
 
 	.pages p {
