--- a/pjlr/css/style.css
+++ b/pjlr/css/style.css
@@ -186,7 +186,7 @@ p {
 
 
 /* Colors */
-.pagewrapper .pages span, .pagewrapper #menu li, .pagewrapper .twitter-share-button {
+.pagewrapper .pages span, .pagewrapper .pages strong, .pagewrapper #menu li, .pagewrapper .twitter-share-button {
 	color: #4BC0A1;
 	transition: color .3s;
 }
