--- a/pantheon/css/style.css
+++ b/pantheon/css/style.css
@@ -6,8 +6,81 @@ html, body {
     height: 100%;
 }
 
+section.cover {
+    width: 100%;
+    overflow-x: hidden;
+    display: block;
+    background: rgba(0, 0, 0, .5);
+    margin-top: 50px;
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+section.cover a.nav {
+    position: absolute;
+    font-size: 8em;
+    color: #fff;
+    top: 50%;
+    -webkit-transform: translate(0, -50%);
+       -moz-transform: translate(0, -50%);
+         -o-transform: translate(0, -50%);
+            transform: translate(0, -50%);
+    transition: left .3s, right .3s;
+}
+
+section.cover a.nav-prev {
+    left: 20px;
+}
+
+section.cover a.nav-prev:hover {
+    left: 10px;
+}
+
+section.cover a.nav-next {
+    right: 20px;
+}
+
+section.cover a.nav-next:hover {
+    right: 10px;
+}
+
+section.cover h2, section.cover h3 {
+    font-family: "Trade Gothic Bold Cond";
+    font-size: 7em;
+    letter-spacing: -2px;
+    color: #fff;
+}
+
+section.cover h3 {
+    font-size: 4em;
+}
+
+section.cover p {
+    color: #fff;
+    font-family: "Proxima Nova Regular";
+    font-size: 1em;
+    padding-top: 1em;
+}
+
+section.cover .step {
+    margin: 0 15%;
+    padding: 40px 0 50px 0;
+    position: relative;
+    display: inline-block;
+}
+
+section.filters {
+    background: #dedede;
+}
+
+section.filters div.filters__wrapper {
+    width: 75%;
+    margin: 0 auto;
+    padding: 10px 40px;
+}
+
 section.content {
-    padding-top: 50px;
     width: 75%;
     height: 100%;
     margin: 0 auto;
@@ -18,55 +91,16 @@ section.content {
             box-sizing: border-box;
 }
 
-div.controls {
-    position: relative;
-    width: 100%;
-}
-
-div.controls-wrapper {
-    padding: 30px 0;
-    width: 75%;
-    margin: 0 auto;
-    position: relative;
-}
-
-div.controls i {
-    font-size: 3em;
-    display: inline-block;
-    position: absolute;
-    top: 50px;
-}
-
-div.controls i {
-    color: #000;
-}
-
-div.controls i.disabled {
-    color: #ccc;
-}
-
-div.controls i.fa-angle-right {
-    right: 10px;
-}
-
-div.controls .step {
-    margin: 0 auto;
-    display: inline-block;
-}
-
-div.controls h2 {
-    font-family: "Trade Gothic Bold Cond";
-    font-size: 2em;
-    letter-spacing: -2px;
-    text-align: center;
-}
-
-div.controls p {
-    margin: 15px 30px;
-}
-
 div.timeline {
     width: 100%;
+}
+
+em {
+    font-style: italic;
+}
+
+.btn-default {
+    margin-right: 10px;
 }
 
 /* SVG */
@@ -76,50 +110,25 @@ svg {
 }
 
 svg .axis text {
-    font: 10px sans-serif;
+    font-family: "Trade Gothic Bold Cond";
 }
 
 svg .axis path, svg .axis line {
     fill: none;
-    stroke: #000;
+    stroke: none;
     shape-rendering: crispEdges;
 }
 
-svg .bar rect {
-    stroke: none;
+svg .rulers line.ruler {
+    stroke-width: 1px;
+    stroke: #dedede;
 }
 
-svg .bar rect.homme {
-    fill: #084259;
-}
-
-svg .bar rect.femme {
-    fill: #A69972;
-}
-
-svg .bar line {
-    stroke-width: 2px;
-}
-
-
-svg .bar line.homme {
-    stroke: #084259;
-}
-
-svg .bar line.femme {
-    stroke: #A69972;
-}
-
-svg .bar circle.end.homme {
-    fill: #084259;
-}
-
-svg .bar circle.end.femme {
-    fill: #A69972;
-}
+svg .bar rect { stroke: none; }
 
 svg .bar text {
-    fill: #fff;
+    display: none;
+    fill: #000;
     font-family: 'Proxima Nova Regular';
     font-size: .7em;
     transform: translate(.7em, -.6em);
