--- a/pantheon/css/style.css
+++ b/pantheon/css/style.css
@@ -3,7 +3,6 @@
 
 html, body {
     width: 100%;
-    height: 100%;
 }
 
 section.cover {
@@ -178,22 +177,66 @@ svg .bar line {
 svg .bar text {
     fill: #fff;
     font-family: 'Trade Gothic Bold Cond';
-    font-size: .9em;
+    font-size: 1em;
     transform: translate(.7em, -.6em);
 }
 
 
+.mobile {
+    display: none;
+}
+
+
 /* Mobile */
-@media (max-width: 768px) {
+@media (max-device-width: 768px) {
     section.cover {
         background-size:auto 100%;
     }
 
+    section.cover .step {
+        padding: 0;
+    }
+
+    section.cover h2 {
+        font-size: 4em;
+    }
+
+    section.cover h3 {
+        font-size: 2em;
+        margin-top: 10px;
+    }
+
+    section.cover a.nav {
+        font-size: 6em;
+    }
+
+    section.cover a.nav-prev {
+        left: 10px;
+    }
+
+    section.cover a.nav-next {
+        right: 10px;
+    }
+
+    section.cover p {
+        width: 90%;
+    }
+
+
     section.content {
-        width: 100%;
+        display: none;
+        width: 90%;
     }
 
     select.form-control {
         margin-top: 5px;
+    }
+
+    section.mobile {
+        display: block;
+    }
+
+    section.mobile {
+        padding-top: 20px;
     }
 }
