--- a/pantheon/css/style.css
+++ b/pantheon/css/style.css
@@ -9,8 +9,7 @@ section.cover {
     width: 100%;
     overflow-x: hidden;
     display: block;
-    background: rgba(0, 0, 0, .5);
-    margin-top: 50px;
+    margin-top: 25px;
     position: relative;
     top: 0;
     left: 0;
@@ -23,7 +22,7 @@ section.cover div.darkfilter {
     display: block;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, .5);
+    background-color: rgba(0, 0, 0, .65);
     position: absolute;
     top: 0;
     left: 0;
@@ -113,6 +112,14 @@ section.cover .step--bubbles i:last-of-type {
     margin-right: 0;
 }
 
+section.cover .credits {
+    position: absolute;
+    bottom: 0;
+    left: 15px;
+    font-size: .8em;
+    pointer-events: none;
+}
+
 section.filters {
     background: #dedede;
     z-index: 1000;
@@ -198,11 +205,13 @@ svg .bar text {
     display: none;
 }
 
-@media (max-device-width: 768px) {
+@media (max-width: 500px) {
     section.cover {
         background-size:auto 100%;
     }
+}
 
+@media (max-device-width: 768px) {
     section.cover .step {
         padding: 0;
     }
